@@ -1,3 +1,11 @@
+2021-01-22 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add convert to mixed units to result context menu
+
+2021-01-16 tuberry <17917040+tuberry@users.noreply.github.com>
+
+	* Add Simplified Chinese translation
+
 2021-01-14 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add temperature calculation modes to preferences
